adding navbar component

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,8 @@
-<p>home works!</p>
+<main class="home">
+  <section class="home__layout">
+    <router-outlet></router-outlet>
+  </section>
+  <footer>
+    <app-navbar></app-navbar>
+  </footer>
+</main>
