--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -1,1 +1,8 @@
-<p>navbar works!</p>
+<div class="navbar">
+  <a *ngFor="let item of navbarItems" class="item" href="#">
+    <div class="item__icon-container">
+      <i class="item__icon" [ngClass]="item.iconClass"></i>
+    </div>
+    <h4 class="item__label">{{item.label}}</h4>
+  </a>
+</div>
