--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,5 +1,12 @@
 // color-variables
 $color-grey-100: #8e8e93;
 $color-grey-200: #747172;
+$color-grey-300: #999999;
 
 $color-black-800: #000000;
+
+$color-white-100: #ffffff;
+$color-white-200: #F5F5F5;
+
+
+$color-pink: #ef6e69;
