--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,3 +1,9 @@
 body {
   font-family: Helvetica, Arial, sans-serif;
 }
+
+.heading-tertiary {
+  font-size: 1.7rem;
+  line-height: 2rem;
+  font-weight: 400;
+}
