adding new post section in forum component, adding carrousel component

--- a/src/app/pages/forum/forum.component.html
+++ b/src/app/pages/forum/forum.component.html
@@ -1,1 +1,26 @@
-<p>forum works!</p>
+<div class="forum">
+  <!-- Search input -->
+  <div class="search">
+    <div class="search__container">
+      <input type="text" class="search__input input input--rounded-s">
+      <div class="search__icon-container">
+        <i class="search__icon icofont-search"></i>
+      </div>
+    </div>
+    <a class="search__cancel">Cancel</a>
+  </div>
+
+  <!-- new post section -->
+  <div class="user">
+    <div class="user__avatar">
+      <img class="user__pic" [src]="this.userProfilePicture" alt="User Profile Picture">
+    </div>
+    <div class="user__new-post">
+      <input placeholder="Post" class="user__input input input--rounded-h">
+      <!-- <div class="user__icon-container"> -->
+      <!-- </div> -->
+    </div>
+  </div>
+
+  <!-- stories section -->
+</div>
