--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -8,5 +8,6 @@ $color-black-800: #000000;
 $color-white-100: #ffffff;
 $color-white-200: #F5F5F5;
 
-
 $color-pink: #ef6e69;
+
+$color-blue: #037aff;
