--- a/src/app/pages/forum/forum.component.html
+++ b/src/app/pages/forum/forum.component.html
@@ -24,4 +24,8 @@
   <section class="stories">
     <app-carrousel [carouselConfig]="this.carouselConfiguration" [images]="this.carouselImages"></app-carrousel>
   </section>
+
+  <section class="posts">
+    <app-post [postInfomation]="this.posts"></app-post>
+  </section>
 </div>
