--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -2,6 +2,7 @@
 $color-grey-100: #8e8e93;
 $color-grey-200: #747172;
 $color-grey-300: #999999;
+$color-grey-400: #616161;
 
 $color-black-800: #000000;
 
@@ -11,3 +12,5 @@ $color-white-200: #F5F5F5;
 $color-pink: #ef6e69;
 
 $color-blue: #037aff;
+
+$color-red: #B70F0A;
