--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $color-grey-100: #8e8e93;
 $color-grey-200: #747172;
 $color-grey-300: #999999;
 $color-grey-400: #616161;
+$color-grey-500: #cccccc;
 
 $color-black-800: #000000;
 
