finished button page

--- a/src/app/pages/emergency/emergency.component.html
+++ b/src/app/pages/emergency/emergency.component.html
@@ -1,1 +1,12 @@
-<p>emergency works!</p>
+<div class="emergency">
+  <div class="button">
+    <div class="button__image">&nbsp;</div>
+  </div>
+  <div class="description">
+    <p class="description__text">
+      When you press the panic button
+      an alert will be sent to your
+      <span>Emergency Contacts</span>
+    </p>
+  </div>
+</div>
