--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -18,13 +18,15 @@
   }
 }
 
-.setting {
+.setting{
   display: block;
   padding-bottom: 1.2rem;
   padding-top: 1.2rem;
   border-bottom: 1px solid rgba($color-black-800, .2);
   position: relative;
   cursor: pointer;
+  text-decoration: none;
+  color: $color-black-800;
 
   &::after {
     content: "";
